10.1.6
------

10.1.5
------
(RB=925594)
Fix the issue that ZooKeeperAnnouncerJmxMBean does not return a open type
(RB=927901)
Fix streaming timeout non-active if response entity stream can be buffered in memory

10.1.4
------
(RB=915139)
Ensuring cloned DataLists and DataMaps have unique __dataComplexHashCode values.
(RB=925965)
Bump up zero-allocation-hashing library version to the latest
(RB=922604)
Update documentation on CreateKVResponse and BatchCreateKVResult.
(RB=918607)
Add .pdsc to .pdl conversion support
(RB=876655)
Modify client compression filter header-setting behavior to allow null operations.

10.1.3
------
(RB=916286)
Fix d2 quarantine pre-healthchecking related issues

10.1.2
------
(RB=916880)
Support surrogate pairs for UTF-16 strings in URI encoding/decoding

10.1.1
------
(RB=906111)
Using Treemap to allow QueryTunnelUtil.decode to parse case insensitive http headers

10.1.0
------
Introduce .pdl file format for authoring Pegasus data schemas.

10.0.2
------
(RB=897071)
Reduce the error messages generated by quarantine
(RB=891773)
Implement disruptor interfaces and core classes

10.0.1
------
(RB=898748)
Delay releasing channel until entity stream is either done or aborted

10.0.0
------
(RB=885516)
Add attribute pagingSupported in method schema and indicate in restspec if get_all and finder methods support paging.

9.0.7
-----
(RB=900756)
Remove the route percent checking in unit test

(RB=902053)
RootBuilderSpec should provide a way to indicate parent-subresource hierarchy.

9.0.6
-----
(RB=900430)
Allow http.maxResponseSize to be Long type

9.0.5
-----
(RB=888618)
Fixed test failures in TestMultiplexerRunMode and TestParseqTraceDebugRequestHandler
(RB=896742)
Force to convert QuarantineLatency to String

9.0.4
-----
(RB=885639)
Fix bug in pegasus plugin. Run publishRestliIdl task only if rest-spec is not equivalent.

9.0.3
-----
(RB=854847)
Added null annotation to generated data models
(RB=883693)